# helpdesk

./: .gitignore  Makefile  README.md  dev-backend.yml  docker-compose.yml
backend/: .gitignore  Dockerfile  Makefile  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 4197c4724024_agent_invitation_table.py  84d68169e356_initial.py  93bca74d730f_email_in_agent.py  e0d690da188f_initial.py
backend/backend/: app.py  config.py  crypto.py  main.py  settings.py
backend/backend/api/: __init__.py  agent.py  test.py
backend/backend/db/: __init__.py
backend/backend/db/models/: agent.py
backend/backend/db/models/agent/: __init__.py  agent.py  invitation.py
backend/backend/utils/: mail.py
backend/docker/: runner
backend/etc/: env.in
config/: certs.env  hosts.env  mail.env  nginx.conf
config/postgresql-init/: 01_create_users.sh  99_grant.sql
frontend/: .dockerignore  .gitignore  .prettierignore  Dockerfile  Dockerfile.production  Makefile  package.json  tailwind.config.js
frontend/docker/: config.js.in  runner
frontend/public/: config.js  index.html
frontend/src/: App.js  api.js  index.js
frontend/src/assets/: index.js
frontend/src/components/: AuthenticatedRoute.jsx
frontend/src/components/ui/: textfield.js
frontend/src/views/: agentlogin.jsx  register.js
mocks/: Dockerfile  Makefile
scripts/: gen-secrets
secrets/: secrets.txt
