[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["Yiorgis Gozadinos <ggozadinog@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
fastapi = "^0.61.1"
uvicorn = "^0.12.2"
python-dotenv = "^0.15.0"
alembic = "^1.4.3"
asyncpg = "^0.21.0"
fastapi_utils = "^0.2.1"
fastapi-mail = "^0.3.0"
psycopg2 = "^2.8.6"
SQLAlchemy = "1.4.0b1"
email-validator = "^1.1.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^20.8b1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
